[gd_scene format=3 uid="uid://b5rhwodrijy1n"]

[ext_resource type="Theme" uid="uid://dm1otqu5sbfnb" path="res://themes/main_theme.tres" id="1_ieivn"]
[ext_resource type="Script" uid="uid://daiivfnplv1ao" path="res://scenes/game_menu/notifier_panel.gd" id="2_hc5uc"]
[ext_resource type="PackedScene" uid="uid://1s0yrla6qat7" path="res://scenes/button/texture_close_button.tscn" id="2_j3mie"]

[node name="NotifierPanel" type="PanelContainer" unique_id=1305171771]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -224.0
offset_right = 608.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ieivn")
script = ExtResource("2_hc5uc")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2012904334]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=503195755]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=482188025]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "As a result of your decision..."
vertical_alignment = 1

[node name="TextureButton" parent="VBoxContainer/HBoxContainer" unique_id=1263313386 instance=ExtResource("2_j3mie")]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer" unique_id=800492753]
custom_minimum_size = Vector2(960, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "The server members are upset!
They really are upset!!!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer" unique_id=260762078]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
